# VulnAgent

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.excalidraw
scripts/: run_agent.py  run_all.py  run_chat.py  run_llm.py  test_llm_agent.py
tests/: test_agent.py  test_llm_agent.py  test_severity_agent.py
vlagentic/agent/: chat.py  coordinator.py  llm.py  llm_agent.py  router.py  severity_agent.py  vlai.py
vlagentic/models/: severity.py  vlai.py
vlagentic/tools/: current_time.py  cwe.py  math.py  severity.py  severity_classifier.py  weather.py
vulnagent/: cli.py  cli_chat.py  cli_llm.py  config.py
vulnagent/agent/: chat.py  coordinator.py  llm.py  router.py  vlai.py
vulnagent/commands/: __init__.py  run_all.py  run_chat.py  run_llm.py
vulnagent/models/: cwe.py
vulnagent/tools/: cwe.py  severity.py  weather.py
